Added \todo{}'s for Chapter 2

--- a/ch2.tex
+++ b/ch2.tex
@@ -23,8 +23,9 @@ There are no exercises in this section.
   By conjugation, isomorphic objects have isomorphic automorphism groups.
 \end{exercise}
 
-\begin{exercise} % TODO I should probably do this
-  Linear algebra exercise. I will do this one if I feel inspired.
+\begin{exercise}
+  \label{exercise:22c}
+  Linear algebra exercise. I will do this one if I feel inspired\todo{\autoref{exercise:22c}: isomorphism of double dual}.
 \end{exercise}
 
 \begin{exercise}
@@ -488,12 +489,13 @@ There are no exercises in this section.
   By filling in~$\pi=\identity_S$ in the universal property defining groupification we easily see the unique morphism~$G\to G'$ is given by~$S\to G$.
 \end{exercise}
 
-\begin{exercise} % TODO prove adjointness
+\begin{exercise}
+  \label{exercise:25g}
   Because by definition~$1\in S$ we have the desired inclusion of categories~$\category{Mod}_{S^{-1}A}\hookrightarrow\category{Mod}_A$ as every~$S^{-1}$\nobreakdash-module is an~$A$\nobreakdash-module using~$a\mapsto a/1$. The converse doesn't hold obviously.
 
   Now this embedding is fully faithful: every~$A$\nobreakdash-module morphism~$M\to M'$ is an~$S^{-1}A$\nobreakdash-module morphism: the localization can occur either before or after the morphism by the corresponding linearity.
 
-  The adjointness is still to come.
+  The adjointness is still to come\todo{\autoref{exercise:25g}: prove adjointness of inclusion functor and forgetful functor in $\category{Mod}_A$ and~$\category{Mod}_{S^{-1}A}$}.
 \end{exercise}
 
 
@@ -519,8 +521,9 @@ There are no exercises in this section.
   The key insight is: \emph{positionwise}. The category~$\category{Com}_{\category{Mod}_A}$ is additive by imposing the positionwise (as in: each position in a complex) structures. The kernels and cokernels of maps of complexes are defined by putting the appropriate (co)kernels at each position. The additional axioms of an abelian category follow likewise.
 \end{exercise}
 
-\begin{exercise} % TODO expand
-  The truth lies in the commutativity of diagram~(2.6.4.5), but I have to come up with a good formulation.
+\begin{exercise}
+  \label{exercise:26d}
+  The truth lies in the commutativity of diagram~(2.6.4.5), but I have to come up with a good formulation\todo{\autoref{exercise:26d}: prove induced map of homology}.
 \end{exercise}
 
 \begin{exercise}
