--- a/solutions.tex
+++ b/solutions.tex
@@ -11,6 +11,7 @@
 \usepackage{mathtools}
 \usepackage{thmtools}
 \usepackage{tikz}
+\usepackage{todonotes}
 \usepackage{xspace}
 
 \usepackage{tgpagella}
@@ -115,6 +116,8 @@
 \clearpage
 
 \tableofcontents*
+
+\listoftodos
 
 
 \chapter{Introduction}
