Package options and more \todo{}'s in Chapter 2

--- a/ch2.tex
+++ b/ch2.tex
@@ -601,3 +601,10 @@ There are no exercises in this section.
     \item The proof of the left-exactness of~$\Hom(M,\cdot)$ can be adapted to proof right-exactness of~$\Hom(\cdot,M)$, noting that we have contravariance: given~$M_2\to M$ we obtain a morphism~$M_1\to M$ by composing it on the left.
   \end{enumerate}
 \end{exercise}
+
+There are more exercises, but I haven't done them yet\todo{finish exercises in Section~2.6}.
+
+
+\section{Spectral sequences}
+
+I decided to leave this section as-is, doing it when the need arises as suggested in the introduction\todo{finish exercises in Section~2.7}.
