--- a/solutions.tex
+++ b/solutions.tex
@@ -1,6 +1,6 @@
 \documentclass[oneside, openany]{memoir}
 % hyperref must come first
-\usepackage{hyperref}
+\usepackage[colorlinks]{hyperref}
 \usepackage{amsfonts}
 \usepackage[leqno]{amsmath}
 \usepackage{amssymb}
@@ -11,7 +11,7 @@
 \usepackage{mathtools}
 \usepackage{thmtools}
 \usepackage{tikz}
-\usepackage{todonotes}
+\usepackage[textsize=small]{todonotes}
 \usepackage{xspace}
 
 \usepackage{tgpagella}
