--- a/ch4.tex
+++ b/ch4.tex
@@ -79,8 +79,10 @@
   Conversely, suppose~$\mathfrak{q}$ prime in~$A$, then~$S^{-1}(A\setminus\mathfrak{q})$ is a multiplicative subset of~$S^{-1}A$ and~$S^{-1}A=S^{-1}(A\setminus\mathfrak{q})\coprod S^{-1}\mathfrak{q}$ so~$S^{-1}\mathfrak{q}$ is prime. This was inspired by Atiyah-Macdonald.
 \end{exercise}
 
-\begin{exercise} % TODO do this
-  I haven't figured it out yet.
+\begin{exercise}
+  Elements of~$(\mathbb{C}[x,y]/(xy))_x$ look like the sum of a polynomial in~$x$ with a polynomial in~$y$ (mixed terms are sent to zero under the quotient with~$(xy)$) divided by a power of~$x$.
+  
+  The obvious ring morphism~$(\mathbb{C}[x,y]/(xy))_x\to\mathbb{C}[x]_x$ is given by forgetting the polynomial in~$y$. This is easily seen to be an isomorphism: a general element (containing terms in~$y$) is in the localization of~$\mathbb{C}[x,y]/(xy)$ already equal to the part without the terms in~$y$ because~$(a_1/s_1)=(a_2/s_2)$ if and only if~$s'(a_1s_2-a_2s_1)$ and we can always multiply by~$s'=x$ in order to drop all terms containing~$y$.
 \end{exercise}
 
 \begin{exercise}
