--- a/ch4.tex
+++ b/ch4.tex
@@ -97,7 +97,7 @@
 \begin{exercise}
   \label{exercise:42k}
   \begin{enumerate}
-    \item\label{enumerate:42k-a} Using~\autoref{exercise:42g} everything is already clear: the primes of~$A$ containing~$I$ form a subset of~$\Spec A$ and~$\phi^{-1}$ is an inclusion-preserving bijection, giving us the suggested picture.
+    \item\label{enumerate:42k-a} Using~\autoref{exercise:42g} everything is already clear: the primes of~$A$ containing~$I$ form a subset of~$\Spec A$ and~$\phi^{-1}$ is an inclusion-preserving bijection, giving us the suggested idea.
 
     \item Using~\autoref{exercise:42h} everything is analogous.
   \end{enumerate}
@@ -107,7 +107,7 @@
   The fiber of~$a\in\mathbb{C}$ corresponds to the preimage of the prime ideal (in this case: maximal ideal) defining~$a$, \ie, $(x-a)$. This obviously gives us~$y^2-a=(y-\sqrt{a})(y+\sqrt{a})$, hence the result.
 \end{exercise}
 
-\begin{exercise} % TODO is it?
+\begin{exercise}
   \begin{enumerate}
     \item This is a restatement of~\autoref{exercise:42k}\ref{enumerate:42k-a}.
 
