Updated 4.2.N, I hope it's better the way it is now

--- a/ch4.tex
+++ b/ch4.tex
@@ -115,8 +115,8 @@
   \end{enumerate}
 \end{exercise}
 
-\begin{exercise} % TODO fix this
-  In the notation of~\autoref{exercise:42k}\ref{enumerate:42k-a} we have~$I=(x_1,\ldots,x_n)$ and~$B$ being~$\mathbb{Z}[x_1,\ldots,x_n]$. A point of~$\mathbb{A}_{\mathbb{F}_p}^n$ corresponds to a polynomial in~$n$~variables that is irreducible over~$\mathbb{F}_p$, which lies in the fiber over~$(p)$ because it is contained in the image of the induced ring map.
+\begin{exercise}
+  We have the situation of~\autoref{exercise:42g}, where~$A=\mathbb{Z}[x_1,\ldots,x_n]$ and the ideal~$I=(p)$. So primes of~$\mathbb{F}_p[x_1,\ldots,x_n]$ correspond to primes of~$A$ that contain~$(p)$, which are exactly the points lying in the fiber~$f^{-1}([(p)])$.
 \end{exercise}
 
 \begin{exercise}
