Removed TODO for 4.2.P

--- a/ch4.tex
+++ b/ch4.tex
@@ -132,7 +132,7 @@
   \end{enumerate}
 \end{exercise}
 
-\begin{exercise} % TODO copy
+\begin{exercise}
   Let~$N(A)$ be the intersection of all prime ideals of~$A$, let~$\mathfrak{p}$ be a prime ideal of~$A$ and~$x\in\mathfrak{N}(A)$. We have~$x^{k-1}x=0\in P$ for some positive integer~$k$ and by primality of~$\mathfrak{p}$ we have~$x\in\mathfrak{p}$ or~$x^{k-1}\in\mathfrak{p}$, so by induction~$x\in\mathfrak{p}$, implying~$N(A)\subseteq\mathfrak{p}$ and~$\mathfrak{N}(A)\subseteq N(A)$.
 
   Now take~$x$ in the complement, \ie, in~$A\setminus\mathfrak{N}(A)$. Define
