--- a/ch4.tex
+++ b/ch4.tex
@@ -116,7 +116,10 @@
 \end{exercise}
 
 \begin{exercise}
+  \label{exercise:42n}
   We have the situation of~\autoref{exercise:42g}, where~$A=\mathbb{Z}[x_1,\ldots,x_n]$ and the ideal~$I=(p)$. So primes of~$\mathbb{F}_p[x_1,\ldots,x_n]$ correspond to primes of~$A$ that contain~$(p)$, which are exactly the points lying in the fiber~$f^{-1}([(p)])$.
+
+  As for the field that appears in the figure, I guess it must be~$\mathbb{Q}$\todo{\autoref{exercise:42n}: find out what field lies over~$[(0)]$}.
 \end{exercise}
 
 \begin{exercise}
@@ -139,13 +142,14 @@
   \begin{equation}
     S=\left\{ I\triangleleft A\,|\,x^k\notin I\forall k\in\mathbb{N}_0 \right\}
   \end{equation}
-  and there is the obvious partial order, induced by inclusion. Furthermore,~$(0)\in S$ so it is non-empty. By Zorn's lemma we get a maximal element~$I\in S$.
+  and there is the obvious partial order, induced by inclusion. Furthermore we have~$(0)\in S$ so it is non-empty. By Zorn's lemma we get a maximal element~$I\in S$.
 
   Suppose~$a,b\in A\setminus I$, the ideals~$(I,a)$ and~$(I,b)$ are strictly bigger, hence they are not in~$S$. Therefore we have the existence of~$n$ and~$m$ such that~$x^n\in(I,a)$ and~$x^m\in(I,b)$, so~$x^{n+m}\in(I,a)(I,b)$ which is a subset of~$(I,ab)$. We obtain~$ab\notin I$ so~$I$ is a prime ideal. But in that case we would have~$x\in I$, a~contradiction because~$I\in S$.
 \end{exercise}
 
-\begin{exercise} % TODO do this
-  I fail to find a decent argument.
+\begin{exercise}
+  \label{exercise:42q}
+  I fail to find a decent argument\todo{\autoref{exercise:42q}: prove that open subsets in an reduced affine algebraic set contains a closed points}.
 \end{exercise}
 
 \begin{exercise}
@@ -189,13 +193,13 @@ There are no exercises in this section.
   \end{enumerate}
 \end{exercise}
 
-\begin{exercise} % TODO better wording
+\begin{exercise}
   \label{exercise:44d}
   The fact that~$\sqrt{I}$ is an ideal is a restatement of~\autoref{exercise:42o}\ref{enumerate:42o-b}.
   
-  Because~$I\subseteq\sqrt{I}$ we obviously have~$\vanishing(\sqrt{I})\subseteq\vanishing(I)$, so let's take~$\mathfrak{p}$ in the right-hand side. As~$\mathfrak{p}$ is prime and by definition of the radical of an ideal we only consider powers of elements, we have the opposite inclusion.
+  Because~$I\subseteq\sqrt{I}$ we obviously have~$\vanishing(\sqrt{I})\subseteq\vanishing(I)$, and assume the inclusion is strict, so let's take~$[\mathfrak{p}]\in\vanishing(I)\setminus\vanishing(\sqrt{I})$. That means there exists an element~$a\in\sqrt{I}\setminus\mathfrak{p}$, but there exists an~$n\in\mathbb{N}_0$ such that~$a^n\in I\subseteq\mathfrak{p}$, which because~$\mathfrak{p}$ is prime gives~$a\in\mathfrak{p}$, a contradiction.
 
-  The fact that~$\sqrt{\sqrt{I}}=\sqrt{I}$ follows from consecutive exponentiation. And if~$f^m\in\mathfrak{p}$ for some~$m$ we have~$f\in\mathfrak{p}$ by primeness.
+  The fact that~$\sqrt{\sqrt{I}}=\sqrt{I}$ follows from consecutive exponentiation. And if~$f^m\in\mathfrak{p}$ for some~$m$ we have~$f\in\mathfrak{p}$ by primality.
 \end{exercise}
 
 \begin{exercise}
