--- a/ch4.tex
+++ b/ch4.tex
@@ -232,7 +232,7 @@ There are no exercises in this section.
 
       This construction doesn't work for every localization as is clear from Figure~4.5 and~\autoref{exercise:42d}. The complement of the ``shred of~$\mathbb{A}_{\mathbb{C}}^2$'' doesn't fulfill the conditions for a closed set described there and in Example~7 of that section.
 
-    \item By~\autoref{exercise:42g} the primes in~$B/I$ correspond bijectively to primes in~$B$ containing~$I$. So a closed subset in~$\Spec B/I$ corresponds to a vanishing set~$\vanishing(S)=\left\{ \mathfrak{p}\in\Spec B/I\,|\,S\subset\mathfrak{p} \right\}$ corresponds to a vanishing set~$\vanishing(S+I)=\left\{ \mathfrak{p}\in\Spec B\,|\,I\subset S+I\subset\mathfrak{p} \right\}$. This set contains only points of~$\Spec B/I$, so we have the subspace topology on~$\Spec B/I$.
+    \item By~\autoref{exercise:42g} the primes in~$B/I$ correspond bijectively to primes in~$B$ containing~$I$. So a closed subset in~$\Spec B/I$ corresponds to a vanishing set that looks like~$\vanishing(S)=\left\{ \mathfrak{p}\in\Spec B/I\,|\,S\subset\mathfrak{p} \right\}$ which is associated to a vanishing set~$\vanishing(S+I)=\left\{ \mathfrak{p}\in\Spec B\,|\,I\subset S+I\subset\mathfrak{p} \right\}$. This set contains only points of~$\Spec B/I$, so we have the subspace topology on~$\Spec B/I$.
 
       For~$\Spec S^{-1}B$ we use~\autoref{exercise:42h}, which states that closed sets in~$\Spec S^{-1}B$ correspond to sets of points in~$\Spec B$ that don't meet~$S$. But if~$\mathfrak{p}$ doesn't meet~$S$ in~$\Spec B$ it is contained in~$\distinguished(f)$ (terminology from Section~4.5).
   \end{enumerate}
