--- a/ch5.tex
+++ b/ch5.tex
@@ -30,3 +30,8 @@
   \label{exercise:51d}
   We have to redo Theorem~5.1.2, but now for this more general construction\todo{\autoref{exercise:51d}: prove that~$\tilde{M}$ is a sheaf}.
 \end{exercise}
+
+
+\section{Visualing schemes II: nilpotents}
+
+There are no exercises in this section.
