Added label to Exercise 4.6.D(a)

--- a/ch4.tex
+++ b/ch4.tex
@@ -314,7 +314,7 @@ There are no exercises in this section.
 \begin{exercise}
   \label{exercise:46d}
   \begin{enumerate}
-    \item By~\autoref{exercise:45a} the distinguished opens form a basis for the Zariski topology and by~\autoref{exercise:45c} we can reduce a covering using distinguished opens to a finite covering. Replace the general covering~$\bigcup_{i\in I}U_i$ by the covering where every~$U_i$ is replaced by the (arbitrary) union of distinguished opens. Take the finite subcover of these distinguished opens and take the original open sets that corresponded to the distinguished opens, these are bigger, hence constitute a finite subcover themselves.
+    \item\label{enumerate:46d-a} By~\autoref{exercise:45a} the distinguished opens form a basis for the Zariski topology and by~\autoref{exercise:45c} we can reduce a covering using distinguished opens to a finite covering. Replace the general covering~$\bigcup_{i\in I}U_i$ by the covering where every~$U_i$ is replaced by the (arbitrary) union of distinguished opens. Take the finite subcover of these distinguished opens and take the original open sets that corresponded to the distinguished opens, these are bigger, hence constitute a finite subcover themselves.
 
     \item\label{enumerate:46d-b} The ideal~$\mathfrak{m}=(x_1,x_2,\ldots)$ is a maximal ideal as~$A/\mathfrak{m}=k$, a field. The complement of~$\vanishing(\mathfrak{m})$ can be covered using distinguished sets~$\distinguished((x_i))_{i\in\mathbb{N}}$, this covering doesn't admit a finite subcovering.
   \end{enumerate}
