--- a/solutions.tex
+++ b/solutions.tex
@@ -81,6 +81,7 @@
 \newcommand\identity{\mathrm{id}}
 \newcommand\nil{\mathfrak{N}}
 \newcommand\projection{\pi}
+\newcommand\sections{\Gamma}
 
 \DeclareMathOperator\alg{alg}
 \DeclareMathOperator\coker{coker}
